--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,34 @@
     
 }
 
-.list{
-    border: 2px ridge rgb(66, 66, 66);
-    text-align: justify;
-    outline: #444444 solid 3px;
-    margin: auto;  
-    padding: 20px
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-.link-button {
+
+li {
+    display:inline;
+}
+
+.navbar {
     color:azure;
     background-image: url(./img/slate-back.jpg);
-    font-size: 16pt;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 520;
+    font-size: 14pt;
+    font-weight: 500;
     letter-spacing: 1px;
+    text-align: center;
+    cursor: pointer;
+}
+.navbar:hover {
+    color: rgb(128, 165, 202);
+    border: inset 2px rgb(73, 73, 73);
+}
 
+h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border-bottom:solid 1px black;
+    padding-bottom: 5px;
 }
