--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,25 @@ li {
     border: inset 2px rgb(73, 73, 73);
 }
 
-h2 {
+.welcome {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     border-bottom:solid 1px black;
     padding-bottom: 5px;
+}
+.top-page {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+}
+
+h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#slogan {
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    text-transform: capitalize;
 }
